change and update list

--- a/index.html
+++ b/index.html
@@ -18,12 +18,22 @@
     <p>Una pagina donde podra colocar sus tareas pendientes. Y marcar si ya las completo o no</p>
   </div>
 
-  <ol>
-    <li>Hola</li>
-    <li>Como</li>
-    <li>Estas</li>
-    <li>?</li>
-  </ol>
+  <table border="">
+    <thead>
+      <tr>
+        <td>Nombre de la tarea</td>
+        <td>tarea Completada</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        
+      </tr>
+    </tbody>
+  </table>
+
+  <ul>
+  </ul>
 
   <h3>Escribe tu tarea:</h3>
   <form action="">
