--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styleHome.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
   <title>List Task</title>
 </head>
 
@@ -18,28 +21,35 @@
     <p>Una pagina donde podra colocar sus tareas pendientes. Y marcar si ya las completo o no</p>
   </div>
 
-  <table border="">
-    <thead>
-      <tr>
-        <td>Nombre de la tarea</td>
-        <td>tarea Completada</td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        
-      </tr>
-    </tbody>
-  </table>
+  <div>
+    <table class="table table-dark table-hover table-striped-columns">
+      <thead>
+        <tr>
+          <td>NOMBRE DE LAS TAREAS</td>
+          <td>TAREAS PENDIENTES</td>
+          <td>FECHA</td>
+          <td>ELIMINAR/EDITAR</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
 
   <ul>
   </ul>
 
-  <h3>Escribe tu tarea:</h3>
-  <form action="">
-    <input type="text" placeholder="Escribir tarea" id="textInput">
-    <input type="button" value="Enviar" id="buttonSave">
-  </form>
+  <div class="conatinerBox">
+    <h3>Escribe tu tarea:</h3>
+    <form action="">
+      <input type="text" placeholder="Escribir tarea" id="textInput">
+      <input type="button" value="Enviar" id="buttonSave">
+    </form>
+  </div>
 
 
 
