--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <p>Una pagina donde podra colocar sus tareas pendientes. Y marcar si ya las completo o no</p>
   </div>
 
-  <div>
+  <div class="containerTable">
     <table class="table table-dark table-hover table-striped-columns">
       <thead>
         <tr>
           <td>NOMBRE DE LAS TAREAS</td>
           <td>TAREAS PENDIENTES</td>
           <td>FECHA</td>
-          <td>ELIMINAR/EDITAR</td>
+          <td>ELIMINAR / EDITAR</td>
         </tr>
       </thead>
       <tbody>
@@ -47,7 +47,7 @@
     <h3>Escribe tu tarea:</h3>
     <form action="">
       <input type="text" placeholder="Escribir tarea" id="textInput">
-      <input type="button" value="Enviar" id="buttonSave">
+      <input type="button" value="Enviar" id="buttonSave" class="btn btn-dark">
     </form>
   </div>
 
